[package]
name = "rust-backend-example"
version = "0.1.0"
authors = ["DamienAI"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
actix-cors = "0.2.0"
serde = "1.0.114"
mongodb = "1.0.0"
mime = "0.3.16"
